# h056

./: pyproject.toml  requirements.txt
docurag/: __main__.py  api.py  cli.py  config.py
docurag/generation/: __init__.py  llm_client.py  prompt_builder.py
docurag/ingestion/: __init__.py  embedder.py  loader.py  pipeline.py  splitter.py  watcher.py
docurag/retrieval/: __init__.py  reranker.py  retriever.py  vector_store.py
