[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docurag"
version = "0.1.0"
description = "本地文档智能问答工具 - 基于 RAG 的个人知识库"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0,<9.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "sentence-transformers>=2.2,<3.0",
    "numpy>=1.24,<2.0",
    "chromadb>=0.4,<1.0",
    "pypdf>=3.0,<5.0",
    "python-docx>=1.0,<2.0",
    "chardet>=5.0,<6.0",
    "nltk>=3.8,<4.0",
    "ollama>=0.1,<1.0",
    "rich>=13.0,<14.0",
    "watchdog>=3.0,<4.0",
]

[project.scripts]
docurag = "docurag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docurag*"]
